[package]
name = "vm"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["vm", "natural", "language", "processing"]
description = "virtual machine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-vm.git"
homepage = "https://github.com/nathanfaucett/rs-vm"

[dependencies.vector]
git = "https://github.com/nathanfaucett/rs-vector.git"
[dependencies.stack]
git = "https://github.com/nathanfaucett/rs-stack.git"
